// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with props 1`] = `
<div
  className="sc-kgAjT dptCsA"
>
  <div
    className="sc-kGXeez isEPTP"
    direction="row"
  >
    <div
      className="sc-kpOJdX dgsGgO"
    >
      <h4
        className="sc-cJSrbW ivjXeI"
      >
         Team Overview 
      </h4>
    </div>
    <div
      className="sc-kpOJdX hTxKyn"
    >
      <button
        className="sc-bwzfXH cqQrNb"
        onClick={undefined}
      />
    </div>
  </div>
  <div
    className="sc-kGXeez isEPTP"
    direction="row"
  >
    <div
      className="sc-kpOJdX dgsGgO"
    >
      <h3
        className="sc-ksYbfQ hbsBi"
      >
        0.909
      </h3>
      <p
        className="sc-dnqmqq cXamce"
      >
        <i>
          Win / Loss
        </i>
      </p>
    </div>
    <div
      className="sc-kpOJdX hTxKyn"
    >
      <h3
        className="sc-ksYbfQ hbsBi"
      >
        -10
      </h3>
      <p
        className="sc-dnqmqq cXamce"
      >
        <i>
          Games Remaining
        </i>
      </p>
    </div>
  </div>
</div>
`;

exports[`renders correctly with toggledSidebar 1`] = `
<div
  className="sc-kgAjT dptCsA"
>
  <div
    className="sc-kGXeez isEPTP"
    direction="row"
  >
    <div
      className="sc-kpOJdX dgsGgO"
    >
      <h4
        className="sc-cJSrbW ivjXeI"
      >
         Team Overview 
      </h4>
    </div>
    <div
      className="sc-kpOJdX hTxKyn"
    >
      <button
        className="sc-bwzfXH cqQrNb"
        onClick=""
      />
    </div>
  </div>
  <div
    className="sc-kGXeez isEPTP"
    direction="row"
  >
    <div
      className="sc-kpOJdX dgsGgO"
    >
      <h3
        className="sc-ksYbfQ hbsBi"
      >
        0.909
      </h3>
      <p
        className="sc-dnqmqq cXamce"
      >
        <i>
          Win / Loss
        </i>
      </p>
    </div>
    <div
      className="sc-kpOJdX hTxKyn"
    >
      <h3
        className="sc-ksYbfQ hbsBi"
      >
        -10
      </h3>
      <p
        className="sc-dnqmqq cXamce"
      >
        <i>
          Games Remaining
        </i>
      </p>
    </div>
  </div>
</div>
`;
